tests/NormalTests/paczka1/small_fuzzy/34459001.err
Error in line 6: ElnugrQ Aw70 74,9
Error in line 7: KXvoXCm A570 94,0
Error in line 12: ElnugrQ A852 0,-
Error in line 13: S696 S981 39,3
